--- a/sources/css/styles.css
+++ b/sources/css/styles.css
@@ -280,3 +280,10 @@ section p {
     line-height: 1.6;
 }
 
+.main-section {
+    display: flex;
+    justify-content: center;  
+    align-items: center;     
+    min-height: 100vh;         
+    flex-direction: column;   
+}
