--- a/sources/css/styles.css
+++ b/sources/css/styles.css
@@ -1,10 +1,11 @@
 /* Accueil */
 
-body.accueil {
+body{
     margin: 0;
     font-family: 'Raleway', sans-serif;
     background-color: #ffffff;
     color: #333;
+    width: 100%;
 }
 
 header {
@@ -154,7 +155,14 @@ button:hover {
 
 
 /*blog*/
-body.blog {
+.main-content
+{
+display: flex; 
+justify-content: center; 
+width: 100%;  
+}
+
+.blog {
     margin: 0;
     font-family: 'Raleway', sans-serif;
     background-color: #ffffff;
@@ -198,7 +206,6 @@ body.blog {
 
 section {
     padding: 30px 20px;
-    max-width: 800px;
     margin: auto;
 }
 
@@ -224,3 +231,9 @@ section p {
     flex-direction: column;   
 }
 
+.formulaire {
+    margin: 0;
+    font-family: 'Raleway', sans-serif;
+    background-color: #ffffff;
+    color: #333;
+}
