--- a/sources/css/styles.css
+++ b/sources/css/styles.css
@@ -290,6 +290,12 @@ html, body {
         align-items: flex-start;
         text-align: left;
     }
+    .card img {
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+        border-radius: 10px;
+    }
 }
 
 @media (min-width: 1024px) {
