Ajout d'un script pour activer la classe 'active' sur les liens de navigation correspondants et ajout de styles pour les liens actifs dans le CSS.

--- a/sources/css/styles.css
+++ b/sources/css/styles.css
@@ -33,6 +33,11 @@ nav ul {
     padding: 0;
 }
 
+.main-nav-link.active {
+    font-weight: bold; /* Texte en gras */
+    text-decoration: underline; /* Texte souligné */
+}
+
 nav a {
     text-decoration: none;
     font-weight: 600;
@@ -343,4 +348,5 @@ html, body {
         height: 300px; /* Ajustement pour les images sur ordinateur */
     }
 }
+
 
