Ajout de l'alignement justifié pour le texte des paragraphes dans les sections

--- a/sources/css/styles.css
+++ b/sources/css/styles.css
@@ -60,6 +60,8 @@ section h3 {
 section p {
     font-family: 'Raleway', sans-serif;
     line-height: 1.6;
+    text-align: justify;
+
 }
 
 .main-head-title{
