--- a/public/sources/css/styles.css
+++ b/public/sources/css/styles.css
@@ -9,6 +9,12 @@ body {
 }
 
 header {
+    position: fixed;
+    top: 0; 
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+    transition: top 0.3s ease;
     background: linear-gradient(90deg, rgba(238,239,234,1) 0%, rgba(245,212,199,1) 44%, rgba(254,178,155,1) 100%);
     padding: 10px 20px;
     display: grid;
@@ -180,6 +186,7 @@ button:hover {
 
 /* Blog */
 .main-content {
+    margin-top: 120px; /* Ajuster la marge supérieure pour éviter que le contenu ne soit masqué par le header */
     display: flex;
     justify-content: center;
     width: 100%;
