--- a/public/sources/css/styles.css
+++ b/public/sources/css/styles.css
@@ -186,7 +186,7 @@ button:hover {
 
 /* Blog */
 .main-content {
-    margin-top: 120px; /* Ajuster la marge supérieure pour éviter que le contenu ne soit masqué par le header */
+    /* Ajuster la marge supérieure pour éviter que le contenu ne soit masqué par le header */
     display: flex;
     justify-content: center;
     width: 100%;
