Ajout de la largeur à 100% pour le corps afin d'assurer une mise en page cohérente

--- a/public/sources/css/styles.css
+++ b/public/sources/css/styles.css
@@ -277,6 +277,7 @@ button:hover {
 /* Sticky Footer */
 html, body {
     height: 100%;
+    width: 100%;
     margin: 0;
     display: flex;
     flex-direction: column;
