Ajout de la largeur et du box-sizing au header pour garantir une mise en page cohérente

--- a/public/sources/css/styles.css
+++ b/public/sources/css/styles.css
@@ -20,6 +20,8 @@ header {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, auto);
     justify-content: center;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 nav {
